OO-7229 & OO-7230: Edubase: support for Multi PAK